[package]
name = "juju-bundle"
version = "0.4.0"
authors = ["Kenneth Koski <kennethkoski@gmail.com>"]
edition = "2018"

[dependencies]
clap = "=3.0.0-beta.2"
ex = "0.1"
failure = "0.1"
juju-rs = { git = "https://github.com/knkski/rust-libjuju.git", rev = "edc699d" }
rayon = "1.3"
structopt = "0.3"
tempfile = "3.1"
petgraph = "0.5"
