[package]
name = "juju-bundle"
version = "0.4.0"
authors = ["Kenneth Koski <kennethkoski@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "=3.0.0-beta.2"
ex = "0.1"
juju-rs = { git = "https://github.com/knkski/rust-libjuju.git", rev = "e5d8635" }
petgraph = "0.5"
rayon = "1.3"
structopt = "0.3"
tempfile = "3.1"
